CRUD corregido